# luatex-svn-git

./: .doxygen  .indent.pro  .travis.yml  COPYING  DIFF  DO.SH  INSTALL  INSTALL.luajittex  Makefile.ok  NEWS  README  README-HB  README.luajittex  TODO  build-luatex.sh  build-shared.sh  build.sh  build.sh.cross  build.sh.linux  build.sh.ppc  buildjit.sh  buildjit.sh.old  newbuild.sh
extrabin/WSL/: README  winepath
extrabin/mingw/: ctangle  otangle  tangle  tie
extrabin/mingw/x86_64-darwin/: ctangle  otangle  tangle  tie
extrabin/mingw/x86_64-linux/: ctangle  tangle
manual/: Makefile  README.luajittex  fdata.lua  fdata_epdf.lua  fdata_img.lua  functionref.tex  luatex-backend.tex  luatex-callbacks.tex  luatex-contents.tex  luatex-enhancements.tex  luatex-export-titlepage.tex  luatex-firstpage.tex  luatex-fontloader.tex  luatex-fonts.tex  luatex-graphics.tex  luatex-introduction.tex  luatex-languages.tex  luatex-libraries.tex  luatex-logos.tex  luatex-lua.tex  luatex-math.tex  luatex-modifications.tex  luatex-nodes.tex  luatex-preamble.tex  luatex-registers.tex  luatex-statistics.tex  luatex-style.tex  luatex-tex.tex  luatex-titlepage.tex  luatex.tex  luatexref-env.tex  luatexref-t.tex  nuts.tex  s-abr-01.tex
manual/graphics/: fontdir.fig
manual/temp/: luatex-pdf.tex
source/: Build  Makefile.am  Makefile.in  README  README.6cross  aclocal.m4  configure  configure.ac  reautoconf  reautoconf-luatex  tardate.ac  tetex.ac  version.ac  withenable.ac
source/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
source/auxdir/auxsub/: Makefile.in  aclocal.m4  configure
source/doc/: Makefile.in  README.solaris  texlive.info  texlive.texi  tlbuild.info  tlbuild.texi
source/libs/: DIFF  DO.SH  Makefile.in  README  aclocal.m4  configure
source/libs/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
source/libs/cairo/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  version.ac
source/libs/dummy/: Makefile.in  configure
source/libs/gmp/: ChangeLog  Makefile.in  configure
source/libs/harfbuzz/: ChangeLog  Makefile.am  Makefile.in  configure  version.ac
source/libs/libpng/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  version.ac
source/libs/lua52/: ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac  version.ac
source/libs/lua53/: Makefile.am  Makefile.in  configure  configure.ac
source/libs/luajit/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  version.ac
source/libs/luajit/LuaJIT-2.0.2-PATCHES/: patch-01-LuaJITTeX  patch-04-lj_str
source/libs/luajit/LuaJIT-2.0.2/src/: lj_str.c  lj_str.c.orig
source/libs/luajit/LuaJIT-2.0.3-PATCHES/: patch-001-lib_init.c  patch-002-lj_str.c  patch-003-lauxlib.h  patch-004-lualib.h  patch-005-Makefile  patch-006-Makefile.dep  patch-008-lj_def.h  patch-009-lua.h
source/libs/luajit/LuaJIT-2.0.3/src/: lj_str.c
source/libs/luajit/LuaJIT-PATCHES/: ChangeLog  patch-01-LuaJITTeX
source/libs/luajit/LuaJIT-src/src/: lj_load.c
source/libs/luajit/TLpatches/: ChangeLog
source/libs/luajit/ac/: luajit.ac  withenable.ac
source/libs/luajit/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
source/libs/luajit/include/: Makefile.in
source/libs/luajit/luajit-2.0.2-PATCHES/: patch-01-Makefile  patch-01-Makefile.dep  patch-01-lauxlib.h  patch-01-lib_init.c  patch-01-lib_package.c  patch-01-lua.h  patch-01-lualib.h
source/libs/luajit/luajit-2.0.2/src/: Makefile  lj_def.h
source/libs/luajit/native/: Makefile.in  aclocal.m4  configure
source/libs/luajit/native/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
source/libs/mpfr/: Makefile.in  aclocal.m4  configure
source/libs/obsdcompat/: Makefile.in  README  aclocal.m4  configure
source/libs/pixman/: Makefile.in  aclocal.m4  configure
source/libs/poppler/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  version.ac
source/libs/xpdf/: Makefile.am  Makefile.in  aclocal.m4  configure
source/libs/zlib/: Makefile.in  aclocal.m4  configure
source/libs/zziplib/: Makefile.am  Makefile.in  aclocal.m4  configure
source/m4/: ChangeLog  kpse-common.m4  kpse-harfbuzz-flags.m4  kpse-libjit-flags.m4  kpse-lua53-flags.m4  kpse-pkgs.m4  kpse-poppler-flags.m4  kpse-xpdf-flags.m4
source/texk/: Makefile.in  README  aclocal.m4  configure
source/texk/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
source/texk/dummy/: Makefile.in  configure
source/texk/kpathsea/: ChangeLog  Makefile.am  Makefile.in  Makefile.in.orig  aclocal.m4  c-auto.in  config.h  configure  db.c  knj.c  kpathsea.c  lib.h  mingw32.c  mingw32.h  mktex.opt  mktexdir  mktexlsr  mktexmf  mktexnam.opt  mktexpk  mktexupd  tex-file.c  texmf.cnf  types.h  version.ac  xcalloc.c  xmalloc.c  xrealloc.c
source/texk/make/: paths.mk  rdepend.mk  tkpathsea.mk
source/texk/texlive/: Makefile.in  configure
source/texk/web2c/: DIFF  DO.SH  Makefile.am  Makefile.in  aclocal.m4  c-auto.in  configure  configure.ac  cpascal.h  ctangleboot.cin  cwebboot.cin  texmfmp.h  tftopl.test  tmf-pool.h  vftovp.test
source/utils/: Makefile.in  README  README.orig  aclocal.m4  configure
source/utils/autom4te.cache/: output.0  output.2  requests  traces.1  traces.2
source/utils/dummy/: Makefile.in  aclocal.m4  configure
src/: Makefile.in  configure  configure.in  reautoconf  withenable.ac
src/libs/: configure  configure.in
src/libs/libpng/: INSTALL
src/libs/lua51/: Makefile  lauxlib.c  lcoco.c  liolib.c  lstrlib.c  luaconf.h
src/libs/luafontforge/: Makefile
src/libs/luapeg/: lpeg.c
src/libs/luazlib/: lzlib.c
src/m4/: kpse-md5-flags.m4  kpse-pkgs.m4  kpse-setup.m4  kpse-web2c.m4  kpse-xpdf-flags.m4
src/texk/: README  configure  configure.in
src/texk/web2c/mpdir/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  lmplib.c  memio.w  mp.w  mpost.w  mpxout.w  psout.w  tfmin.w
(+1358 files in other folders)
