## Wrapper Makefile.am to build luajit .
##
##   Copyright (C) 2012 Luigi Scarso
##
##   This file is free software; the copyright holder
##   gives unlimited permission to copy and/or distribute it,
##   with or without modifications, as long as this notice is preserved.
##
ACLOCAL_AMFLAGS = -I ../../m4




# Rebuild
.PHONY: rebuild
rebuild: config.force all


## We want to re-distribute the whole original luajit source tree.
##
EXTRA_DIST = $(LUAJIT_TREE)

## Changes applied to the original source tree
##
EXTRA_DIST += $(LUAJIT_TREE)-PATCHES

# in case of an SVN repository
dist-hook:
	rm -rf `find $(distdir) -name .svn -o -name autom4te.cache`

noinst_DATA = libluajit.la

luajit-build/Makefile: config.force
	rm -rf luajit-build
	$(MKDIR_P) luajit-build
	cd luajit-build && cp -r $(abs_srcdir)/$(LUAJIT_TREE)/src src \
	&& cp -r $(abs_srcdir)/$(LUAJIT_TREE)/dynasm dynasm




libluajit.la: luajit-build/Makefile
	rm -rf luajit-install
	cd luajit-build/src \
	 && $(MAKE) $(AM_MAKEFLAGS) $(CROSSFLAGS) $(EXTRAFLAGS)
clean-local:
	rm -rf luajit-* luajit libluajit* pkgconfig

######################

config.force: 
	echo timestamp >config.force
	$(SHELL) ./config.status --recheck

DISTCLEANFILES = config.force

if crosscompile_i586_mingw32msvc_gcc
 CROSS=i586-mingw32msvc- 
 TARGET_SYS=Windows
 HOST_CC="gcc -m32"
 CROSSFLAGS= HOST_CC=$(HOST_CC) CROSS=$(CROSS) TARGET_SYS=$(TARGET_SYS) LDFLAGS= 
endif crosscompile_i586_mingw32msvc_gcc

if crosscompile_x86_64_w64_mingw32_gcc
 CROSS=x86_64-w64-mingw32- 
 TARGET_SYS=Windows
 HOST_CC="gcc"
 CROSSFLAGS= HOST_CC=$(HOST_CC) CROSS=$(CROSS) TARGET_SYS=$(TARGET_SYS) LDFLAGS= 
endif crosscompile_x86_64_w64_mingw32_gcc


if clang_compiler
 EXTRAFLAGS= CC=clang
endif


if build
check_PROGRAMS = 
dist_check_SCRIPTS = luajit.test
TESTS = luajit.test
endif build

## Files generated by TESTS

